implement sync button

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,9 +13,9 @@
         <a class="navbar-brand" href="/">Home</a>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <!--                <a class="navbar-brand" th:href="@{/addtask}"> New</a>-->
-                <a class="btn btn-primary my-1" th:href="@{/addtask}">New</a>
+            <ul class="navbar-nav me-auto ">
+                <a class="btn btn-primary" style="margin-right: 10px" th:href="@{/addtask}">New</a>
+                <a class="btn btn-success" th:href="@{/sync}">Sync</a>
             </ul>
         </div>
     </div>
